    install_extras has been run (previously, it would do so once apt was
    configured, which produced some confusing error messages).
  * Call apt-setup finish-install script during cleanup, not while
    configuring apt; removing cdrom entries from sources.list at this point
    broke OEM installs and probably other things (LP: #188240).

  [ Evan Dandrea ]
  * Validate the boot device string that the user provides on the
    advanced page.
  * Change the boot device Entry to a ComboBox that displays suitable targets.
  * Updated the location of gnome-settings-daemon in ubiquity-dm.

  [ Agostino Russo ]
  * Added debug mode boot parameter

 -- Agostino Russo <agostino.russo@gmail.com>  Fri, 08 Feb 2008 09:00:36 +0000

ubiquity (1.7.6) hardy; urgency=low

  [ Mario Limonciello ]
  * Update plugins for changes with MythTV 0.21

  [ Evan Dandrea ]
  * Automatic update of included source packages: partman-target
    52ubuntu4.

 -- Evan Dandrea <evand@ubuntu.com>  Fri, 01 Feb 2008 11:30:33 -0500

ubiquity (1.7.5) hardy; urgency=low

  [ Evan Dandrea ]
  * Add accessibility support to 'only-ubiquity'.
  * Move noninteractive frontend to a purely gobject-based event loop
    (LP: #149477).
  * Noninteractive mode now implies --automatic (LP: #149473).
  * Add new nautilus gconf keys to the list we temporarily disable to
    prevent constant pop-ups.
  * Automatic update of included source packages: console-setup
    1.21ubuntu2, migration-assistant 0.6.0, partman-target 52ubuntu3,
    user-setup 1.16ubuntu3.

  [ Mario Limonciello ]
  * Add proper theme support to mythbuntu FE.

  [ Colin Watson ]
  * Update console-setup component for layout and variant changes in
    console-setup 1.21ubuntu1.
  * Run fontconfig-voodoo with --force.
  * Call 'fontconfig-voodoo --auto --force --quiet' when the language is
    changed. May help with LP #185269.

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 30 Jan 2008 15:32:25 -0500

ubiquity (1.7.4) hardy; urgency=low
