@@ -1,3 +1,3 @@
 #!/usr/bin/python
 
-__all__ = ['i18n', 'misc', 'osextras', 'validation', 'tz']
+__all__ = ['gconftool', 'i18n', 'misc', 'osextras', 'validation', 'tz']
